--- a/style.css
+++ b/style.css
@@ -55,33 +55,19 @@ body{
     flex-direction: column;
     justify-content: center;
     padding: 0 50px;
+    margin-bottom:5px;
 }
 .main{
     display: flex;
 }
 .section-title{
-    padding-block-end: 10px;
-    border-bottom: 2px solid var(--main-color);
+    padding-block-end: 0px;
+    border-bottom: 3px solid var(--main-color);
 }
 .section{
     padding-block-end: 50px;
 }
-.section-university{
-    background-color: var(--main-color);
-    color: var(--text-color);
-    border-radius: 4px;
-    display: inline-block;
-    font-family: 'ralewaymedium';
-    padding: 2px 10px;
-}
-.section-school{
-    background-color: var(--main-color);
-    color: var(--text-color);
-    border-radius: 4px;
-    display: inline-block;
-    font-family: 'ralewaymedium';
-    padding: 2px 10px;
-}
+
 /* Main Style End */
 /* Header Style Start */
     .header{
@@ -146,6 +132,8 @@ body{
 /* Header Style End */
 /* Contact Style Start */
     .contacts__block{
+        font-size:18px;
+        margin-top:5px;
         display: flex;
         align-items: center;
         margin-block-end: 15px;
@@ -189,6 +177,7 @@ body{
     .skills__text{
         inline-size: 110px;
         margin-inline-end: 15px;
+        margin-top: 5px;
         font-weight: 600;
     }
     .skills-list{
@@ -217,16 +206,27 @@ body{
 /* Skills Style End */
 /* Education Style Start */
 .education__block{
-    margin-block-end: 40px;
+    margin-block-end: 30px;
 }
 .education__text{
+    font-size:18px;
     font-weight: 600;
+}
+.section-university{
+    background-color: var(--main-color);
+    color: var(--text-color);
+    border-radius: 4px;
+    display: inline-block;
+    font-family: 'ralewaymedium';
+    padding: 2px 10px;
+    margin-top: 7px;
 }
 /* Education Style End */
 /* Languages Style Start */
 .languages__item{
     padding: 0 0 10px 15px;
     position: relative;
+    margin-top: 5px;
 }
 .languages__item:last-child{
     padding: 0 0 0 15px;
@@ -244,9 +244,16 @@ body{
     margin-inline-end: 10px;
 }
 /* Languages Style End */
+/* Summary Style Start*/
+ .summary-text{
+  margin-top:7px;
+  font-size:18px;
+}
+/* Summary Style End*/
 /* Key Style Start */
-   .section key{
-	   font-size: 20px;
+   .key__list{
+     margin-top: 7px;
+	   font-size: 18px;
 }
    .key__item{
         padding: 0 0 10px 15px;
@@ -268,15 +275,13 @@ body{
         margin-right: 10px;
     }
 /* Key Style End */
-    .section summary{
-	    font-size: 20px;
-} 
 /* Code Style Start */
    .section code {
     font-size: 21px;
     position: relative;
     inset-inline-start: -180px;
   }
+    
 /* Code Style End */
 /* Project Style Start */
    .section project {
@@ -285,6 +290,8 @@ body{
     inset-inline-start: -180px;
   }
    .project__link{
+        margin-top: 7px;
+        font-size: 18px;
         color: var(--text-color);
         text-decoration: none;
         transition: all .4s linear;
@@ -310,6 +317,7 @@ body{
         margin-inline-end: 10px;
     }
     .footer__text{
+        font-size:13px;
         display: flex;
         align-items: center;
     }
